--- a/style.css
+++ b/style.css
@@ -1,8 +1,112 @@
-/* *{
+/* 
+Project : One Page
+Author  : Musa OCAK
+Date    : 14 June 2023
+Version : v.1 
+*/
 
-} */
+/*#####################################################################*/
+/* Root */
 
-/* html{} */
-body{
+/*#####################################################################*/
+/* Common Property */
+* {
+    margin: 0;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 20px;
+}
+
+body {
     font-family: 'Manrope', sans-serif;
+    line-height: 1.2;
+    position: relative;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+img:hover {
+    opacity: 0.98;
+    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.8);
+    transition: all 2s;
+    cursor: pointer;
+}
+
+i {
+    font-size: 1.5rem;
+}
+
+.my_clearfix::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/* My Special Size */
+.fSize1 {
+    font-size: 1rem;
+    /* 15pixel carpi 1 demek */
+}
+
+.fSize2 {
+    font-size: 2rem;
+    /* 15pixel carpi 2 demek */
+}
+
+.fSize3 {
+    font-size: 3rem;
+    /* 15pixel carpi 3 demek */
+}
+
+.fSize4 {
+    font-size: 4rem;
+    /* 15pixel carpi 4 demek */
+}
+
+/* My Line-Clamp */
+.line-clamp5{
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    display:-webkit-box;
+    overflow: hidden;
+}
+
+.line-clamp8{
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+    display:-webkit-box;
+    overflow: hidden;
+}
+
+.line-clamp10{
+    -webkit-line-clamp: 10;
+    -webkit-box-orient: vertical;
+    display:-webkit-box;
+    overflow: hidden;
+}
+
+/*#####################################################################*/
+/* Header */
+header{
+background-image: url("./img/NightOfCity.jpg");
+background-repeat: no-repeat;
+background-size: cover;
+background-position: 50% 50%;
+z-index: -1;
+height: 80vh;
+padding-top: 4rem;
 }
