--- a/style.css
+++ b/style.css
@@ -61,6 +61,15 @@ i {
     clear: both;
 }
 
+.myHeading{
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    text-shadow: 0.4px -0.9px rgba(0,0 ,0 ,0.9 );
+    opacity: 0.7;
+}
+
 /* My Special Size */
 .fSize1 {
     font-size: 1rem;
@@ -83,6 +92,13 @@ i {
 }
 
 /* My Line-Clamp */
+.line-clamp4 {
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+}
+
 .line-clamp5 {
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
@@ -121,6 +137,16 @@ header {
     z-index: -1;
     height: 80vh;
     padding-top: 4rem;
+}
+/* Header */
+#messages{
+    margin-top:3rem;
+    margin-bottom:3rem;
+}
+
+#messages i{
+    color: blue;
+    font-size: 5rem;
 }
 
 /* Footer */
