--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ i {
     opacity: 0.7;
 }
 
+
+
 /* My Special Size */
 .fSize1 {
     font-size: 1rem;
@@ -119,6 +121,12 @@ i {
     display: -webkit-box;
     overflow: hidden;
 }
+.line-clamp20 {
+    -webkit-line-clamp: 20;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+}
 
 /*#####################################################################*/
 
@@ -138,7 +146,7 @@ header {
     height: 80vh;
     padding-top: 4rem;
 }
-/* Header */
+/* Messages */
 #messages{
     margin-top:3rem;
     margin-bottom:3rem;
@@ -147,6 +155,21 @@ header {
 #messages i{
     color: blue;
     font-size: 5rem;
+}
+
+/* Parallax */
+#parallax{
+    background-color: transparent;
+    background-image: url('./img/parallax.jpg');
+    background-size: cover;
+    height: 35rem;
+    padding: 2rem;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+#parallax h2,p{
+    color: white;
 }
 
 /* Footer */
